헤더영역 작업중

--- a/index.html
+++ b/index.html
@@ -6,4 +6,16 @@
 	</head>
 	<body>
 		<h1>hello world!</h1>
+		<header>
+			<div class="logo"></div>
+			<nav>
+				<ul>
+					<li><a href="3"></a></li>
+					<li><a href="3"></a></li>
+					<li><a href="3"></a></li>
+					<li><a href="3"></a></li>
+				</ul>
+			</nav>
+		</body>
+		</header>
 		<html>
