--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html lang="ko>
 	<head>
-		<meta name="viewport" content="widht=device-width, initial-scale=1.0">
-		<title>vi로 편집하는 index</title>
-	</head>
-	<body>
-		<h1>hello world!</h1>
-		<header>
-			<div class="logo"></div>
+		<meta name=" viewport" content="widht=device-width, initial-scale=1.0">
+<title>vi로 편집하는 index</title>
+</head>
+
+<body>
+	<h1>hello world!</h1>
+	<header>
+		<div class="logo">
 			<nav>
 				<ul>
 					<li><a href="#">메뉴1</a></li>
@@ -16,6 +17,8 @@
 					<li><a href="#">메뉴4</a></li>
 				</ul>
 			</nav>
-		</body>
-		</header>
-		<html>
+		</div>
+	</header>
+	<main></main>
+</body>
+<html>
